--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "i18next-http-backend": "2.2.0",
     "jsonwebtoken": "8.5.1",
     "keen-slider": "6.8.5",
+    "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "next": "13.3.2",
     "nprogress": "0.2.0",
